# htb-app-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
htb_mcp/: __init__.py  client.py  config.py  errors.py  files.py  http_auth.py  server.py
tests/: smoke_client.py  smoke_http.py  smoke_mcp.py  test_client_routing.py
